--- a/layouts/index.html
+++ b/layouts/index.html
@@ -49,33 +49,33 @@
   </div>
 
   <div class="content-wrapper">
-    <div class="content map light" id="about">
-      <h2 class="content-head is-center">Become Legend.</h2>
-
+    <!-- Section -->
+    <div class="content light" id="about">
+      <h2 class="content-head is-center">About</h2>
       <div class="pure-g">
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead">Get Started Quickly</h3>
+          <h3 class="content-subhead">First Point</h3>
           <p>
             Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
             sodales pellentesque elementum.
           </p>
         </div>
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead">Responsive Layouts</h3>
+          <h3 class="content-subhead">Second Point</h3>
           <p>
             Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
             sodales pellentesque elementum.
           </p>
         </div>
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead">Modular</h3>
+          <h3 class="content-subhead">Third Point</h3>
           <p>
             Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
             sodales pellentesque elementum.
           </p>
         </div>
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead">Plays Nice</h3>
+          <h3 class="content-subhead">Fourth Point</h3>
           <p>
             Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
             sodales pellentesque elementum.
@@ -84,77 +84,185 @@
       </div>
     </div>
 
-    <div class="ribbon l-box-lrg pure-g">
-      <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-        <img
-          width="300"
-          alt="File Icons"
-          class="pure-img-responsive"
-          src="/img/common/file-icons.png"
-        />
+    <!-- Section -->
+    <div class="content dark" id="games">
+      <h2 class="content-head is-center">Games</h2>
+      <div class="pure-g">
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">First Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Second Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Third Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Fourth Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
       </div>
-      <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-        <h2 class="content-head content-head-ribbon">
-          Laboris nisi ut aliquip.
-        </h2>
+    </div>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor.
-        </p>
+    <!-- Section -->
+    <div class="content light" id="prizes">
+      <h2 class="content-head is-center">Prizes</h2>
+      <div class="pure-g">
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">First Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Second Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Third Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Fourth Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section -->
+    <div class="content dark" id="tickets">
+      <h2 class="content-head is-center">Tickets</h2>
+      <div class="pure-g">
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">First Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Second Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Third Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Fourth Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section -->
+    <div class="content light" id="patrons">
+      <h2 class="content-head is-center">Patrons</h2>
+      <div class="pure-g">
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">First Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Second Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Third Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Fourth Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section -->
+    <div class="content dark" id="faq">
+      <h2 class="content-head is-center">FAQ</h2>
+      <div class="pure-g">
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">First Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Second Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Third Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+          <h3 class="content-subhead">Fourth Point</h3>
+          <p>
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+        </div>
       </div>
     </div>
 
     <div class="content">
       <h2 class="content-head is-center">
-        Dolore magna aliqua. Uis aute irure.
+        Join Us &middot; January 15ish 2021
       </h2>
-
-      <div class="pure-g">
-        <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-          <form class="pure-form pure-form-stacked">
-            <fieldset>
-              <label for="name">Your Name</label>
-              <input id="name" type="text" placeholder="Your Name" />
-
-              <label for="email">Your Email</label>
-              <input id="email" type="email" placeholder="Your Email" />
-
-              <label for="password">Your Password</label>
-              <input
-                id="password"
-                type="password"
-                placeholder="Your Password"
-              />
-
-              <button type="submit" class="pure-button">Sign Up</button>
-            </fieldset>
-          </form>
-        </div>
-
-        <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-          <h4>Contact Us</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-
-          <h4>More Information</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer l-box is-center">
-      View the source of this layout to learn more. Made with love by the Pure
-      Team.
     </div>
   </div>
 </main>
