--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,8 +3,7 @@
   <div class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
       <a class="pure-menu-heading" href="">
-        <span class="battlefield">BATTLE ROYALE</span>
-        <span class="marker rgb">13</span>
+        <span class="battlefield">BR</span><span class="marker rgb">13</span>
       </a>
 
       <ul class="pure-menu-list">
@@ -50,7 +49,7 @@
 
   <div class="content-wrapper">
     <!-- Section -->
-    <div class="content light" id="about">
+    <div class="content light orange" id="about">
       <h2 class="content-head is-center">About</h2>
       <div class="pure-g">
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -120,7 +119,7 @@
     </div>
 
     <!-- Section -->
-    <div class="content light" id="prizes">
+    <div class="content light green" id="prizes">
       <h2 class="content-head is-center">Prizes</h2>
       <div class="pure-g">
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -190,7 +189,7 @@
     </div>
 
     <!-- Section -->
-    <div class="content light" id="patrons">
+    <div class="content light purple" id="patrons">
       <h2 class="content-head is-center">Patrons</h2>
       <div class="pure-g">
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
