--- a/layouts/index.html
+++ b/layouts/index.html
@@ -52,32 +52,24 @@
     <div class="content light orange" id="about">
       <h2 class="content-head is-center">About</h2>
       <div class="pure-g">
-        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead">First Point</h3>
+        <div class="l-box pure-u-1 pure-u-md-1-2">
           <p>
-            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-            sodales pellentesque elementum.
+            From intense gaming, to extraordinary prizes and unbeatable bragging
+            rights, Battle Royale has it all. Every year, over 100 competitors
+            bring their best to Ottawa's largest 24-hour gaming event, for a
+            chance to win incredible prizes! If you think you have what it takes
+            to rise to the top or simply want to have a good time, Battle Royale
+            is for you.
           </p>
         </div>
-        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead">Second Point</h3>
+        <div class="l-box pure-u-1 pure-u-md-1-2">
           <p>
-            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-            sodales pellentesque elementum.
-          </p>
-        </div>
-        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead">Third Point</h3>
-          <p>
-            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-            sodales pellentesque elementum.
-          </p>
-        </div>
-        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead">Fourth Point</h3>
-          <p>
-            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-            sodales pellentesque elementum.
+            From intense gaming, to extraordinary prizes and unbeatable bragging
+            rights, Battle Royale has it all. Every year, over 100 competitors
+            bring their best to Ottawa's largest 24-hour gaming event, for a
+            chance to win incredible prizes! If you think you have what it takes
+            to rise to the top or simply want to have a good time, Battle Royale
+            is for you.
           </p>
         </div>
       </div>
@@ -258,7 +250,7 @@
       </div>
     </div>
 
-    <div class="content">
+    <div class="content dark">
       <h2 class="content-head is-center">
         Join Us &middot; January 15ish 2021
       </h2>
