--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,13 @@ html {
   font-size: 20px;
 }
 
+body{
+  font-size: 0.8rem;
+  text-shadow: 0 0 8px #444;
+  color: white;
+  background: #111;
+}
+
 a {
   color: white;
 }
@@ -190,11 +197,13 @@ img {
 /* Colors and Backgrounds */
 
 .light {
+  text-shadow: 0 0 8px rgba(17, 17, 17, 0.24);
   color: #111;
   background: #EEE;
 }
 
 .dark {
+  text-shadow: 0 0 8px #444;
   background: #111;
   color: #EEE;
 }
@@ -259,9 +268,6 @@ img {
 }
 
 @media (min-width: 48em) {
-  body {
-    font-size: 16px;
-  }
   .home-menu {
     text-align: left;
   }
